--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,16 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goVer: [1.17, 1.18, 1.19]
+        goVer: [1.21, 1.22, 1.23, 1.24]
     steps:
       - name: Set up Go ${{ matrix.goVer }}
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.goVer }}
         id: go
 
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Get dependencies
         run: go get
